terraform/main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
    }
  }
} 

provider "aws" {
  region = var.aws_region
}

resource "aws_security_group" "devops_sg" {
  name = "devops-project-sg"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "devops_server" {
  ami           = var.ami_id
  instance_type = "t3.micro"
  key_name = "python"

  vpc_security_group_ids = [
    aws_security_group.devops_sg.id
  ]

  user_data = file("${path.module}/userdata.sh")

  tags = {
    Name = "Terraform-DevOps-Server"
  }
}
